crates/zizmor/tests/integration/snapshots/integration__fix_format_json__artipacked_fixes_json_patch.snap
---
source: crates/zizmor/tests/integration/fix_format_json.rs
expression: "zizmor().input(input_under_test(\"artipacked.yml\")).args([\"--fix=all\",\n\"--fix-format=json\", \"--quiet\"]).run()?"
---
warning[artipacked]: credential persistence through GitHub Actions artifacts
  --> @@INPUT@@:18:9
   |
18 |       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # tag=v4.2.2
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ does not set persist-credentials: false
   |
   = note: audit confidence → Low
   = note: this finding has an auto-fix

2 findings (1 suppressed, 1 fixable): 0 informational, 0 low, 1 medium, 0 high
[
  {
    "file": "@@INPUT@@",
    "operations": [
      {
        "op": "add",
        "path": "/jobs/artipacked/steps/0/with",
        "value": {
          "persist-credentials": false
        }
      }
    ]
  }
]
