crates/zizmor/tests/integration/snapshots/integration__fix_format_json__no_fixes_produces_empty_output.snap
---
source: crates/zizmor/tests/integration/fix_format_json.rs
expression: "zizmor().input(input_under_test(\"fix-scenarios/no-fixes.yml\")).args([\"--fix=all\",\n\"--fix-format=json\", \"--quiet\"]).run()?"
---
warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:6:3
   |
 6 | /   no-fixes:
 7 | |     runs-on: ubuntu-latest
 8 | |     steps:
 9 | |       - name: Simple step
...  |
12 | |       - name: Another step
13 | |         run: echo "Another simple step"
   | |                                        ^
   | |                                        |
   | |________________________________________this job
   |                                          default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

3 findings (2 suppressed): 0 informational, 0 low, 1 medium, 0 high
